update all files

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-PORT = 3000;
-
-DATABASE_URL = mongodb+srv://CleanTogether
-:s8G9xHeveagmbMxd
-@cluster0.d0osb03.mongodb.net/?appName=Cluster0
+DB_USERNAME=CleanTogether
+DB_PASS=s8G9xHeveagmbMxd
